; ModuleID = '/home/carl/AnghaBench/tg/extr_interface.c_do_post.c'
source_filename = "/home/carl/AnghaBench/tg/extr_interface.c_do_post.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.command = type { i32 }
%struct.arg = type { i32 }
%struct.in_ev = type { i32 }

@E_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"reply_id=%d, disable=%d\0A\00", align 1
@reply_id = common dso_local global i32 0, align 4
@disable_msg_preview = common dso_local global i32 0, align 4
@TLS = common dso_local global i32 0, align 4
@TGLMF_POST_AS_CHANNEL = common dso_local global i32 0, align 4
@do_html = common dso_local global i32 0, align 4
@print_msg_success_gw = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @do_post(%struct.command* %0, i32 %1, %struct.arg* %2, %struct.in_ev* %3) #0 {
  %5 = alloca %struct.command*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.arg*, align 8
  %8 = alloca %struct.in_ev*, align 8
  store %struct.command* %0, %struct.command** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.arg* %2, %struct.arg** %7, align 8
  store %struct.in_ev* %3, %struct.in_ev** %8, align 8
  %9 = load i32, i32* %6, align 4
  %10 = icmp eq i32 %9, 2
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert(i32 %11)
  %13 = load %struct.in_ev*, %struct.in_ev** %8, align 8
  %14 = icmp ne %struct.in_ev* %13, null
  br i1 %14, label %15, label %20

15:                                               ; preds = %4
  %16 = load %struct.in_ev*, %struct.in_ev** %8, align 8
  %17 = getelementptr inbounds %struct.in_ev, %struct.in_ev* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* %17, align 4
  br label %20

20:                                               ; preds = %15, %4
  %21 = load i32, i32* @E_DEBUG, align 4
  %22 = load i32, i32* @reply_id, align 4
  %23 = load i32, i32* @disable_msg_preview, align 4
  %24 = call i32 @vlogprintf(i32 %21, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 %22, i32 %23)
  %25 = load i32, i32* @TLS, align 4
  %26 = load %struct.arg*, %struct.arg** %7, align 8
  %27 = getelementptr inbounds %struct.arg, %struct.arg* %26, i64 0
  %28 = getelementptr inbounds %struct.arg, %struct.arg* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @ARG2STR(i32 1)
  %31 = load i32, i32* @reply_id, align 4
  %32 = call i32 @TGL_SEND_MSG_FLAG_REPLY(i32 %31)
  %33 = load i32, i32* @disable_msg_preview, align 4
  %34 = or i32 %32, %33
  %35 = load i32, i32* @TGLMF_POST_AS_CHANNEL, align 4
  %36 = or i32 %34, %35
  %37 = load i32, i32* @do_html, align 4
  %38 = or i32 %36, %37
  %39 = load i32, i32* @print_msg_success_gw, align 4
  %40 = load %struct.in_ev*, %struct.in_ev** %8, align 8
  %41 = call i32 @tgl_do_send_message(i32 %25, i32 %29, i32 %30, i32 %38, i32* null, i32 %39, %struct.in_ev* %40)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @vlogprintf(i32, i8*, i32, i32) #1

declare dso_local i32 @tgl_do_send_message(i32, i32, i32, i32, i32*, i32, %struct.in_ev*) #1

declare dso_local i32 @ARG2STR(i32) #1

declare dso_local i32 @TGL_SEND_MSG_FLAG_REPLY(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
